[gd_scene load_steps=6 format=3 uid="uid://dkdmsbw1ph825"]

[ext_resource type="Texture2D" uid="uid://cphlblvt01plb" path="res://addons/hyh.digression/icons/icon_chat.svg" id="2_hackq"]
[ext_resource type="PackedScene" uid="uid://dhubj3hnf0rxp" path="res://addons/hyh.digression/editor/controls/GraphBreadcrumbs.tscn" id="3_8v60q"]
[ext_resource type="Texture2D" uid="uid://dfvamw687u0qj" path="res://addons/hyh.digression/icons/icon_search.svg" id="4_es86a"]
[ext_resource type="Script" uid="uid://lymfjlvcrqoc" path="res://addons/hyh.digression/editor/controls/AnchorList.gd" id="5_f01m4"]
[ext_resource type="Script" uid="uid://b0a8lsbjxe56m" path="res://addons/hyh.digression/editor/DialogueGraphEditor.gd" id="6"]

[node name="DialogueGraphEditor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6")

[node name="TitleBar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TitleBar"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 6

[node name="TextureRect" type="TextureRect" parent="TitleBar/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_hackq")

[node name="GraphBreadcrumbs" parent="TitleBar" instance=ExtResource("3_8v60q")]
layout_mode = 2
size_flags_vertical = 4

[node name="MenuBar" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[node name="HS" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
split_offset = 200

[node name="VBoxContainer" type="VBoxContainer" parent="HS"]
layout_mode = 2

[node name="AnchorFilter" type="LineEdit" parent="HS/VBoxContainer"]
layout_mode = 2
placeholder_text = "Filter Anchors..."
right_icon = ExtResource("4_es86a")

[node name="MC" type="MarginContainer" parent="HS/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnchorList" type="ItemList" parent="HS/VBoxContainer/MC"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
allow_reselect = true
script = ExtResource("5_f01m4")

[node name="MarginContainer" type="MarginContainer" parent="HS"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="HS/MarginContainer"]
layout_mode = 2
right_disconnects = true
zoom_min = 0.25
zoom_max = 1.0
show_zoom_label = true

[node name="GraphContextMenu" type="PopupMenu" parent="."]
size = Vector2i(255, 424)
theme_override_constants/v_separation = 10
item_count = 16
item_0/text = "Add Text Node"
item_0/id = 0
item_1/text = "Add Branch (Match) Node"
item_1/id = 1
item_2/text = "Add Branch (If) Node"
item_2/id = 14
item_3/text = "Add Choice Node"
item_3/id = 2
item_4/text = "Add Set Node"
item_4/id = 3
item_5/text = "Add Action Node"
item_5/id = 4
item_6/text = "Add Sub-Graph"
item_6/id = 5
item_7/text = "Add Random Node"
item_7/id = 6
item_8/id = 9
item_8/separator = true
item_9/text = "Add Comment"
item_9/id = 7
item_10/id = 8
item_10/separator = true
item_11/text = "Add Jump To Node"
item_11/id = 10
item_12/text = "Add Anchor Node"
item_12/id = 11
item_13/text = "Add Routing Node"
item_13/id = 12
item_14/text = "Add Repeat Last Choice Node"
item_14/id = 13
item_15/text = "Add Exit Node"
item_15/id = 15

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]

[node name="NodePopupMenu" type="PopupMenu" parent="."]
size = Vector2i(111, 44)
theme_override_constants/v_separation = 10
item_count = 1
item_0/text = "Set as root"
item_0/id = -1

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[connection signal="graph_open_requested" from="TitleBar/GraphBreadcrumbs" to="." method="_on_graph_breadcrumbs_graph_open_requested"]
[connection signal="text_changed" from="HS/VBoxContainer/AnchorFilter" to="." method="_on_anchor_filter_text_changed"]
[connection signal="text_submitted" from="HS/VBoxContainer/AnchorFilter" to="." method="_on_anchor_filter_text_submitted"]
[connection signal="anchor_selected" from="HS/VBoxContainer/MC/AnchorList" to="." method="_on_anchor_list_anchor_selected"]
[connection signal="connection_request" from="HS/MarginContainer/GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="connection_to_empty" from="HS/MarginContainer/GraphEdit" to="." method="_on_graph_edit_connection_to_empty"]
[connection signal="copy_nodes_request" from="HS/MarginContainer/GraphEdit" to="." method="_on_graph_edit_copy_nodes_request"]
[connection signal="delete_nodes_request" from="HS/MarginContainer/GraphEdit" to="." method="_node_close_request"]
[connection signal="disconnection_request" from="HS/MarginContainer/GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="duplicate_nodes_request" from="HS/MarginContainer/GraphEdit" to="." method="_on_graph_edit_duplicate_nodes_request"]
[connection signal="end_node_move" from="HS/MarginContainer/GraphEdit" to="." method="_on_graph_edit_end_node_move"]
[connection signal="focus_entered" from="HS/MarginContainer/GraphEdit" to="." method="_on_graph_edit_focus_entered"]
[connection signal="paste_nodes_request" from="HS/MarginContainer/GraphEdit" to="." method="_on_graph_edit_paste_nodes_request"]
[connection signal="popup_request" from="HS/MarginContainer/GraphEdit" to="." method="_on_graph_edit_popup_request"]
[connection signal="scroll_offset_changed" from="HS/MarginContainer/GraphEdit" to="." method="_on_graph_edit_scroll_offset_changed"]
[connection signal="index_pressed" from="GraphContextMenu" to="." method="_on_graph_popup_index_pressed"]
[connection signal="popup_hide" from="GraphContextMenu" to="." method="_on_graph_popup_hide"]
[connection signal="index_pressed" from="NodePopupMenu" to="." method="_on_node_popup_index_pressed"]
